@@ -34,4 +34,13 @@
 #define FSB_SAVE		256
 #define FSB_LOAD		512
 
+/*
+ * define spacings for dialogs
+ */
+
+#define DIALOG_BORDER_SPACING 5
+#define DIALOG_V_SPACING 8
+#define DIALOG_H_SPACING 10
+#define DIALOG_INDENTATION 10
+
 #endif /* __X_DIALOG_H__ */
