@@ -1,5 +1,11 @@
 2006-12-18 Werner Hoch <werner.ho@gmx.de>
 
+	* include/x_dialog.h: added constants for dialog layout style
+
+	* src/x_dialog.h: use GtkDialog for text entry dialog, some code 
+	  refactoring. Fixed a bug in select_all_text_in_textview() which
+	  toggled the selection instead of selecting it.
+	   
 	* src/o_picture.c: set transient_for flag for the dialogs
 	  add image and modify image.
 
